# CSDojo

./: README.md  TODO.md  error.json  main.py  manage.py  pyproject.toml
CSDojo/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
account/: admin.py  models.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_rename_password_user_password_hash.py  0003_user_score.py  0004_remove_user_score.py
account/views/: __init__.py  auth.py  manage.py  profile.py
challenge/: admin.py  models.py  urls.py  views.py
challenge/migrations/: 0001_initial.py  0002_challenge_run_url.py  0003_challenge_difficulty_alter_challenge_flag_type_and_more.py  0004_alter_challenge_created_at_and_more.py  0005_rename_categories_challenge_category.py  0006_challenge_cpu_limit_challenge_memory_limit.py  0007_challenge_static_flag.py  0008_remove_challenge_cpu_limit_and_more.py  0009_rename_run_url_challenge_config_dir_and_more.py  0010_challenge_image_existed_alter_challenge_config_dir.py  0011_alter_challenge_config_dir.py  0012_alter_challenge_category_alter_challenge_tags.py  0013_challenge_score.py  0014_remove_challenge_score.py  0015_challenge_is_dockerd_alter_challenge_config_dir.py
challenge/views/: __init__.py  classify.py  details.py
competition/: admin.py  models.py  urls.py  views.py
competition/migrations/: 0001_initial.py  0002_remove_team_captain_remove_team_users.py  0003_alter_competitiontraininglog_team_and_more.py  0004_competitiontraininglog_competition.py  (+2 more)
team/: admin.py  models.py  urls.py  views.py
training/: admin.py  models.py  urls.py  views.py
(+21 files in other folders)
