[project]
name = "csdojo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.0",
    "argon2-cffi>=23.1.0",
    "django>=5.1.7",
    "docker>=7.1.0",
    "pyjwt>=2.10.1",
    "pyotp>=2.9.0",
    "pytz>=2025.1",
    "toml>=0.10.2",
]
